fix: text overflow in userInfo component

--- a/frontend/src/features/userInfo/userInfo.scss
+++ b/frontend/src/features/userInfo/userInfo.scss
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  line-break: anywhere;
 
   &__user-text {
     margin: 1rem 0;
